--- a/index.html
+++ b/index.html
@@ -5,76 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hoga</title>
-  <link rel="stylesheet" href="main.css">
-  <style>
-    body,
-    html {
-      height: 100%;
-    }
-
-    body {
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      background-color: #bababa ;a4b3b6
-
-    }
-
-    h1 {
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-
-    h2 {
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-
-    p {
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-
-    main {
-      margin: 0 auto;
-      width: 80%;
-      background-color: #d3d3d3;
-      padding-left: 1rem;
-      padding-right: 1rem;
-      
-    }
-
-    img {
-      float: right;
-      margin-left: 1rem;
-      margin-bottom: 1rem;
-      background-image: url('img/walterhappy.jpg');
-
-    }
-
-    footer {
-      margin-top: auto;
-      background-color: #222222;
-      padding: .5rem;
-      text-align: center;
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      color: rgb(214, 214, 214);
-    }
-
-    nav {
-      display: flex;
-      background-color: #ff0000;
-      padding: .5rem;
-      font-size: 1.4rem;
-    }
-
-    ul {
-      display: flex;
-      text-align: center;
-    }
-
-    li {
-      margin: 0 1rem;
-      list-style: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+ 
 </head>
 
 <body>
